Wed Aug 11 20:09:15 BST 2004  Olly Betts <olly@survex.com>

	* api/omdatabase.cc,include/xapian/database.h: Added replace_document
	  and delete_document variants which take a unique id term name rather
	  than a document id.
	* include/xapian/database.h: Better documentation for replace_document
	  and delete_document.

Wed Aug 11 16:15:10 BST 2004  Olly Betts <olly@survex.com>

	* backends/quartz/,bin/quartzcheck.cc,bin/quartzdump.cc,
	  tests/quartztest.cc: Eliminated QuartzBufferedTable.

Wed Jun 30 20:34:08 BST 2004  Olly Betts <olly@survex.com>

	* NEWS: Fixed an unwrapped line.

Wed Jun 30 20:32:31 BST 2004  Olly Betts <olly@survex.com>

	* HACKING: Added note about the cvs-tag-release script.

Wed Jun 30 19:05:45 BST 2004  Olly Betts <olly@survex.com>

	* HACKING,NEWS,PLATFORMS,configure.in: Version 0.8.1.

Wed Jun 30 14:23:20 BST 2004  Olly Betts <olly@survex.com>

	* AUTHORS,PLATFORMS: Updated.

Tue Jun 29 23:24:59 BST 2004  Olly Betts <olly@survex.com>

	* tests/api_nodb.cc: Make emptyquery1 check that Query("") causes an
	  InvalidArgumentError exception.

Tue Jun 29 17:29:03 BST 2004  Richard Boulton <richard@tartarus.org>

	* Makefile.am: Remove Debian files from distribution tarballs,
	  since there will often be multiple patch releases for each
	  release.  Debian files will be available from an apt repository
	  in future.

Mon Jun 28 01:29:00 BST 2004  Olly Betts <olly@survex.com>

	* NEWS: Mostly updated for 0.8.1 release.

Sun Jun 27 23:37:01 BST 2004  Olly Betts <olly@survex.com>

	* backends/quartz/quartz_postlist.cc: Fixed bug in postlist merging.

Sat Jun 26 00:51:04 BST 2004  Olly Betts <olly@survex.com>

	* AUTHORS: Add Malcolm Baldridge (helped fix a problem with building
	  the PHP bindings with newer versions of SWIG and PHP).

Fri Jun 26 00:29:10 BST 2004  Olly Betts <olly@survex.com>

	* HACKING,api/ompositionlistiterator.cc,api/ompostlistiterator.cc,
	  api/omtermlistiterator.cc,include/xapian/: MSetIterator and